--- a/command_record.ipynb
+++ b/command_record.ipynb
@@ -91,6 +91,135 @@
     "nohup python main_single.py --n_epoch=750 --model='AE-RNN' --h_dim=80 --z_dim=5 --dataset='industrobo' --logdir='test_industrobo_dim6'  --mpnt_wt=-1  --do_test   --do_train --u_dim=6 --y_dim=6 &\n",
     "nohup python main_single.py --n_epoch=750 --model='AE-RNN' --h_dim=100 --z_dim=2 --dataset='industrobo' --logdir='test_industrobo_dim6'  --mpnt_wt=-1  --do_test   --do_train --u_dim=6 --y_dim=6 &\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sequence length longer + 10hz (not down sampled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=10 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=-1 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=-10 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=40  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=10 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=40  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=-1 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=40  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=-10 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=60  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=10 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=60  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=-1 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=60  --dataset='industrobo' --logdir='test_10hz_1024'  --mpnt_wt=-10 --do_train  --do_test   --z_dim=12 --u_dim=6 --y_dim=6 &"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### baseline: lgssm\n",
+    "1. physics-augmented + biased info\n",
+    "2. physics-augmented + correct info\n",
+    "3.  physics-guided + biased info\n",
+    "4.  physics-guided + correct info\n",
+    "5. pure NN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted'  --mpnt_wt=10 --do_train  --do_test  --A_prt=2  --B_prt=2  --C_prt=2 --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted'  --mpnt_wt=-1 --do_train  --do_test  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=2 --B_prt=2  --C_prt=2  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted'  --mpnt_wt=10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### try less data\n",
+    "1. (previous) 2000\n",
+    "2. 1000\n",
+    "3. 500\n",
+    "4. 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=1000 --k_max_val=1000 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len1000'  --mpnt_wt=10 --do_train  --do_test  --A_prt=2  --B_prt=2  --C_prt=2 --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=1000 --k_max_val=1000 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len1000'  --mpnt_wt=-1 --do_train  --do_test  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=1000 --k_max_val=1000 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len1000'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=2 --B_prt=2  --C_prt=2  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=1000 --k_max_val=1000 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len1000'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=1000 --k_max_val=1000 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len1000'  --mpnt_wt=10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20 --k_max_train=500 --k_max_val=500 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len500'  --mpnt_wt=10 --do_train  --do_test  --A_prt=2  --B_prt=2  --C_prt=2 --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=500 --k_max_val=500 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len500'  --mpnt_wt=-1 --do_train  --do_test  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=500 --k_max_val=500 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len500'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=2 --B_prt=2  --C_prt=2  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=500 --k_max_val=500 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len500'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=500 --k_max_val=500 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len500'  --mpnt_wt=10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=10 --do_train  --do_test  --A_prt=2  --B_prt=2  --C_prt=2 --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=-1 --do_train  --do_test  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=2 --B_prt=2  --C_prt=2  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
+    "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n"
+   ]
   }
  ],
  "metadata": {
