--- a/output_analyse.ipynb
+++ b/output_analyse.ipynb
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2342,12 +2342,129 @@
     "                                      u_val = u_val,\n",
     "                                      y_val = y_val,\n",
     "                                      x_val = x_val)\n",
-    "                                                        \n",
-    "         '''\n",
-    "         do not run this!!!!!!!!\n",
-    "         # file_path = 'data/Toy_LGSSM/toy_lgssm_pre_trainingset_{}.npz'\n",
-    "        # generate_lgssm_multi(file_path)\n",
-    "         '''\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "def run_toy_lgssm_sim(u, A, B, C, sigma_state, sigma_out):\n",
+    "    # get length of input\n",
+    "    k_max = u.shape[-1]\n",
+    "\n",
+    "    # size of variables\n",
+    "    n_u = 1\n",
+    "    n_y = 1\n",
+    "    n_x = 2\n",
+    "\n",
+    "    # allocation\n",
+    "    x = np.zeros([n_x, k_max])\n",
+    "    y = np.zeros([n_y, k_max])\n",
+    "\n",
+    "    # run over all time steps\n",
+    "    for k in range(k_max):\n",
+    "        if k==0:\n",
+    "            x_km1 = np.zeros([n_x])\n",
+    "        else:\n",
+    "            x_km1 = x[:, k-1]\n",
+    "        print(k,np.dot(A, x_km1),np.dot(B, u[:, k]),sigma_state * np.random.randn(n_x),np.dot(A, x_km1).shape,np.dot(B, u[:, k]).shape,(sigma_state * np.random.randn(n_x)).shape)\n",
+    "        print((np.dot(A, x_km1) + np.dot(B, u[:, k]) + sigma_state * np.random.randn(n_x)))\n",
+    "        x[:, k] = np.dot(A, x_km1) + np.dot(B, u[:, k]) + sigma_state * np.random.randn(n_x)\n",
+    "        y[:, k] = np.dot(C, x[:, k])\n",
+    "\n",
+    "    return x, y\n",
+    "\n",
+    "def create_toy_lgssm_5_datasets_uyx(seq_len_train=None, seq_len_val=None, seq_len_test=None, **kwargs):\n",
+    "    # state space matrices\n",
+    "    A = np.array([[0.7, 0.8], [0, 0.1]])\n",
+    "    B = np.array([[-1], [0.1]])\n",
+    "    C = np.array([[1], [0]]).transpose()\n",
+    "    # C = np.array([[1], [-1]]).transpose()\n",
+    "    # define noise\n",
+    "    sigma_state = np.sqrt(0.25)\n",
+    "    sigma_out = np.sqrt(1)\n",
+    "\n",
+    "    # length of all data sets\n",
+    "    if bool(kwargs) and (\"k_max_train\" in kwargs):\n",
+    "        k_max_train = kwargs['k_max_train']\n",
+    "        k_max_val = kwargs['k_max_val']\n",
+    "        k_max_test = kwargs['k_max_test']\n",
+    "    else:\n",
+    "        # Default option\n",
+    "        k_max_train = 2000\n",
+    "        k_max_val = 2000\n",
+    "        k_max_test = 5000\n",
+    "\n",
+    "    u_train = (np.random.rand(1, k_max_train) - 0.5) * 5\n",
+    "    u_val = (np.random.rand(1, k_max_val) - 0.5) * 5\n",
+    "    # get the outputs\n",
+    "    x_train,y_train = run_toy_lgssm_sim(u_train, A, B, C, sigma_state, 0) \n",
+    "    x_val,y_val = run_toy_lgssm_sim(u_val, A, B, C, sigma_state, 0) \n",
+    "    y_train = y_train +  sigma_out * np.random.randn(1, k_max_train)\n",
+    "    y_val = y_val + sigma_out * np.random.randn(1, k_max_val)\n",
+    "\n",
+    "    return u_train, u_val, y_train, y_val, x_train, x_val\n",
+    "\n",
+    "def generate_lgssm_multi(file_path,number=5):\n",
+    "    for i in range(0,number):\n",
+    "        u_train, u_val, y_train, y_val, x_train, x_val = create_toy_lgssm_5_datasets_uyx()\n",
+    "        u_train = u_train.transpose(1, 0)\n",
+    "        y_train = y_train.transpose(1, 0)\n",
+    "        x_train = x_train.transpose(1, 0)\n",
+    "        u_val = u_val.transpose(1, 0)\n",
+    "        y_val = y_val.transpose(1, 0)\n",
+    "        x_val = x_val.transpose(1, 0)\n",
+    "        np.savez(file_path.format(i), u_train =  u_train,\n",
+    "                                      y_train = y_train,\n",
+    "                                      x_train = x_train,\n",
+    "                                      u_val = u_val,\n",
+    "                                      y_val = y_val,\n",
+    "                                      x_val = x_val)\n",
+    "        \n",
+    "def generate_lgssm_test(file_path,number=5,length=20000):\n",
+    "    for i in range(0,number):\n",
+    "        u_train, u_val, y_train, y_val, x_train, x_val = create_toy_lgssm_5_datasets_uyx(k_max_train = 20000, k_max_val=0,k_max_test=0)\n",
+    "        u_test = u_train.transpose(1, 0)\n",
+    "        y_test = y_train.transpose(1, 0)\n",
+    "        x_test = x_train.transpose(1, 0)\n",
+    "\n",
+    "        np.savez(file_path, u_test =  u_test,\n",
+    "                                      y_test = y_test,\n",
+    "                                      x_test = x_test,)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfile_path = 'data/Toy_LGSSM/toy_lgssm_pre_testset_shifted.npz'\\ngenerate_lgssm_test(file_path)\\n\\n\\nfile_path = 'data/Toy_LGSSM/toy_lgssm_pre_trainingset_shifted_{}.npz'\\ngenerate_lgssm_multi(file_path)\\n\""
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dont run this!!!!\n",
+    "'''\n",
+    "file_path = 'data/Toy_LGSSM/toy_lgssm_pre_testset_shifted.npz'\n",
+    "generate_lgssm_test(file_path)\n",
+    "\n",
+    "\n",
+    "file_path = 'data/Toy_LGSSM/toy_lgssm_pre_trainingset_shifted_{}.npz'\n",
+    "generate_lgssm_multi(file_path)\n",
+    "'''"
    ]
   },
   {
