new update for the final training

--- a/command_record.ipynb
+++ b/command_record.ipynb
@@ -220,6 +220,37 @@
     "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=-10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n",
     "nohup python main_single.py --n_epoch=500 --model='AE-RNN' --h_dim=20  --k_max_train=200 --k_max_val=200 --dataset='toy_lgssm_5_pre' --logdir='test_lgssm_shifted_len200'  --mpnt_wt=10 --do_train  --do_test  --A_prt=1  --B_prt=1  --C_prt=1  --z_dim=2 --u_dim=1 --y_dim=1 &\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## new simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "nohup python main_single.py --n_epoch=300 --model='AE-RNN' --h_dim=20  --dataset='industrobo' --logdir='07018_test_industrobo_ir-2_newsimulated'  --mpnt_wt=-10  --do_test  --do_train  --z_dim=12 --u_dim=6 --y_dim=6 --init_lr=1e-2    --if_simulation=1  &"
+   ]
   }
  ],
  "metadata": {
