--- a/output_analyse.ipynb
+++ b/output_analyse.ipynb
@@ -21465,7 +21465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
